--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
